--- a/Material.Icons.WPF/Material.Icons.WPF.csproj
+++ b/Material.Icons.WPF/Material.Icons.WPF.csproj
@@ -1,8 +1,19 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
     <UseWPF>true</UseWPF>
+    <TargetFrameworks>net461;netcoreapp3.1</TargetFrameworks>
+    <LangVersion>9</LangVersion>
+    <Nullable>enable</Nullable>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Title>Material.Icons.WPF</Title>
+    <Authors>SKProCH</Authors>
+    <Description>WPF control for display material icons from Material.Icons</Description>
+    <PackageProjectUrl>https://github.com/SKProCH/Material.Icons/</PackageProjectUrl>
+    <PackageLicenseUrl>https://github.com/SKProCH/Material.Icons/blob/master/LICENSE</PackageLicenseUrl>
+    <RepositoryUrl>https://github.com/SKProCH/Material.Icons.git</RepositoryUrl>
+    <RepositoryType>Git</RepositoryType>
+    <PackageTags>material icons material-design google-material wpf</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
