--- a/Material.Icons.Avalonia/Material.Icons.Avalonia.csproj
+++ b/Material.Icons.Avalonia/Material.Icons.Avalonia.csproj
@@ -13,8 +13,7 @@
         </AvaloniaResource>
     </ItemGroup>
     <ItemGroup>
-        <PackageReference Include="Avalonia" Version="0.9.12" />
-        <PackageReference Include="Avalonia.Desktop" Version="0.9.12" />
+        <PackageReference Include="Avalonia" Version="0.10.0-rc1" />
     </ItemGroup>
     <ItemGroup>
       <ProjectReference Include="..\Material.Icons\Material.Icons.csproj" />
