--- a/Material.Icons/Material.Icons.csproj
+++ b/Material.Icons/Material.Icons.csproj
@@ -17,25 +17,25 @@
     </ItemGroup>
 
     <PropertyGroup>
-        <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
+        <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">../</SolutionDir>
     </PropertyGroup>
 
     <Target Name="GenerateIcons" BeforeTargets="BeforeBuild">
         <ItemGroup>
-            <Compile Remove="**\Generated\*.cs" />
+            <Compile Remove="**/Generated/*.cs" />
         </ItemGroup>
         
         <Message Text="$(SolutionDir)" />
-        <Exec Command="dotnet run --configuration Release --project Material.Icons.Gen\Material.Icons.Gen.csproj" WorkingDirectory="$(SolutionDir)" />
+        <Exec Command="dotnet run --configuration Release --project Material.Icons.Gen/Material.Icons.Gen.csproj" WorkingDirectory="$(SolutionDir)" />
         
-        <Copy SourceFiles="$(SolutionDir)MaterialIconDataFactory.cs" DestinationFiles="$(SolutionDir)Material.Icons\Generated\MaterialIconDataFactory.cs" />
+        <Copy SourceFiles="$(SolutionDir)MaterialIconDataFactory.cs" DestinationFiles="$(SolutionDir)Material.Icons/Generated/MaterialIconDataFactory.cs" />
         <Delete Files="$(SolutionDir)MaterialIconDataFactory.cs" />
         
-        <Copy SourceFiles="$(SolutionDir)MaterialIconKind.cs" DestinationFiles="$(SolutionDir)Material.Icons\Generated\MaterialIconKind.cs" />
+        <Copy SourceFiles="$(SolutionDir)MaterialIconKind.cs" DestinationFiles="$(SolutionDir)Material.Icons/Generated/MaterialIconKind.cs" />
         <Delete Files="$(SolutionDir)MaterialIconKind.cs" />
         
         <ItemGroup>
-            <Compile Include="**\Generated\*.cs" />
+            <Compile Include="**/Generated/*.cs" />
         </ItemGroup>
     </Target>
 
