--- a/Material.Icons/Material.Icons.csproj
+++ b/Material.Icons/Material.Icons.csproj
@@ -11,6 +11,7 @@
         <RepositoryType>Git</RepositoryType>
         <PackageTags>material icons material-design google-material</PackageTags>
         <RootNamespace>Material.Icons</RootNamespace>
+        <Version>1.0.0</Version>
     </PropertyGroup>
     <ItemGroup>
       <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
@@ -37,14 +38,5 @@
         <ItemGroup>
             <Compile Include="**/Generated/*.cs" />
         </ItemGroup>
-    </Target>
-
-    <Target Name="PreparePackageVersionFromFile" BeforeTargets="GenerateNuspec">
-        <ReadLinesFromFile File="VERSION">
-            <Output TaskParameter="Lines" ItemName="VersionLines" />
-        </ReadLinesFromFile>
-        <PropertyGroup>
-            <Version>@(VersionLines, '%0a')</Version>
-        </PropertyGroup>
     </Target>
 </Project>
