--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -42,3 +42,4 @@ jobs:
         with:
           github_token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
           message: 'Icons collection update'
+          branch: 'master'
