--- a/Material.Icons.WPF/Material.Icons.WPF.csproj
+++ b/Material.Icons.WPF/Material.Icons.WPF.csproj
@@ -14,6 +14,8 @@
     <RepositoryUrl>https://github.com/SKProCH/Material.Icons.git</RepositoryUrl>
     <RepositoryType>Git</RepositoryType>
     <PackageTags>material icons material-design google-material wpf</PackageTags>
+    <SignAssembly>True</SignAssembly>
+    <AssemblyOriginatorKeyFile>..\key.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
   <ItemGroup>
