--- a/Material.Icons.WPF/Material.Icons.WPF.csproj
+++ b/Material.Icons.WPF/Material.Icons.WPF.csproj
@@ -16,6 +16,8 @@
     <PackageTags>material icons material-design google-material wpf</PackageTags>
     <SignAssembly>True</SignAssembly>
     <AssemblyOriginatorKeyFile>..\key.snk</AssemblyOriginatorKeyFile>
+    <Version>1.1.0</Version>
+    <PackageReleaseNotes>- Add strong signing to assembly</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
