--- a/Material.Icons.Gen/Material.Icons.Gen.csproj
+++ b/Material.Icons.Gen/Material.Icons.Gen.csproj
@@ -22,7 +22,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+      <PackageReference Include="System.Text.Json" Version="7.0.1" />
     </ItemGroup>
 
 </Project>
