Removing Material.Icons.csproj dependecy to any kind of Json library. Improving MaterialIconInfo.cs class

--- a/Material.Icons.Avalonia.Demo/Material.Icons.Avalonia.Demo.csproj
+++ b/Material.Icons.Avalonia.Demo/Material.Icons.Avalonia.Demo.csproj
@@ -8,13 +8,14 @@
         <Folder Include="Models\" />
     </ItemGroup>
     <ItemGroup>
-        <PackageReference Include="Avalonia" Version="11.0.0-preview1" />
-        <PackageReference Include="Avalonia.Desktop" Version="11.0.0-preview1" />
-        <PackageReference Include="Avalonia.Diagnostics" Version="11.0.0-preview1" />
-        <PackageReference Include="Avalonia.ReactiveUI" Version="11.0.0-preview1" />
-        <PackageReference Include="Avalonia.Themes.Simple" Version="11.0.0-preview1" />
+        <PackageReference Include="Avalonia" Version="11.0.0-preview4" />
+        <PackageReference Include="Avalonia.Desktop" Version="11.0.0-preview4" />
+        <PackageReference Include="Avalonia.Diagnostics" Version="11.0.0-preview4" />
+        <PackageReference Include="Avalonia.ReactiveUI" Version="11.0.0-preview4" />
+        <PackageReference Include="Avalonia.Themes.Simple" Version="11.0.0-preview4" />
     </ItemGroup>
     <ItemGroup>
       <ProjectReference Include="..\Material.Icons.Avalonia\Material.Icons.Avalonia.csproj" />
+      <ProjectReference Include="..\Material.Icons\Material.Icons.csproj" />
     </ItemGroup>
 </Project>
