--- a/Material.Icons.Avalonia/Material.Icons.Avalonia.csproj
+++ b/Material.Icons.Avalonia/Material.Icons.Avalonia.csproj
@@ -18,6 +18,14 @@
         <PackageReleaseNotes>Removed Newtonsoft.Json dependency</PackageReleaseNotes>
     </PropertyGroup>
     <ItemGroup>
+        <Compile Update="**\*.xaml.cs">
+            <DependentUpon>%(Filename)</DependentUpon>
+        </Compile>
+        <AvaloniaResource Include="**\*.xaml">
+            <SubType>Designer</SubType>
+        </AvaloniaResource>
+    </ItemGroup>
+    <ItemGroup>
         <PackageReference Include="Avalonia" Version="11.0.0-preview1" />
     </ItemGroup>
     <ItemGroup>
