--- a/Material.Icons.Avalonia.Demo/Material.Icons.Avalonia.Demo.csproj
+++ b/Material.Icons.Avalonia.Demo/Material.Icons.Avalonia.Demo.csproj
@@ -1,21 +1,24 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-    <PropertyGroup>
-        <OutputType>WinExe</OutputType>
-        <TargetFramework>netcoreapp3.0</TargetFramework>
-        <Nullable>enable</Nullable>
-    </PropertyGroup>
-    <ItemGroup>
-        <Folder Include="Models\" />
-    </ItemGroup>
-    <ItemGroup>
-        <PackageReference Include="Avalonia" Version="11.0.0-preview4" />
-        <PackageReference Include="Avalonia.Desktop" Version="11.0.0-preview4" />
-        <PackageReference Include="Avalonia.Diagnostics" Version="11.0.0-preview4" />
-        <PackageReference Include="Avalonia.ReactiveUI" Version="11.0.0-preview4" />
-        <PackageReference Include="Avalonia.Themes.Simple" Version="11.0.0-preview4" />
-    </ItemGroup>
-    <ItemGroup>
-      <ProjectReference Include="..\Material.Icons.Avalonia\Material.Icons.Avalonia.csproj" />
-      <ProjectReference Include="..\Material.Icons\Material.Icons.csproj" />
-    </ItemGroup>
+  <PropertyGroup>
+    <OutputType>WinExe</OutputType>
+    <TargetFramework>net6.0</TargetFramework>
+    <Nullable>enable</Nullable>
+  </PropertyGroup>
+  <ItemGroup>
+    <Folder Include="Models\"/>
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Avalonia" Version="11.0.0-preview4"/>
+    <PackageReference Include="Avalonia.Desktop" Version="11.0.0-preview4"/>
+    <PackageReference Include="Avalonia.Diagnostics" Version="11.0.0-preview4"/>
+    <PackageReference Include="Avalonia.ReactiveUI" Version="11.0.0-preview4"/>
+    <PackageReference Include="Avalonia.Themes.Simple" Version="11.0.0-preview4"/>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Material.Icons.Avalonia\Material.Icons.Avalonia.csproj"/>
+    <ProjectReference Include="..\Material.Icons\Material.Icons.csproj"/>
+  </ItemGroup>
+  <ItemGroup>
+    <AvaloniaResource Include="Assets\avalonia-logo.ico"/>
+  </ItemGroup>
 </Project>
