--- a/Material.Icons.Avalonia/Material.Icons.Avalonia.csproj
+++ b/Material.Icons.Avalonia/Material.Icons.Avalonia.csproj
@@ -14,8 +14,8 @@
         <SignAssembly>True</SignAssembly>
         <AssemblyOriginatorKeyFile>..\key.snk</AssemblyOriginatorKeyFile>
         <PackageTags>material icons material-design google-material avalonia</PackageTags>
-        <PackageVersion>1.2.2</PackageVersion>
-        <PackageReleaseNotes>Fixes no precompiled xaml for styles</PackageReleaseNotes>
+        <PackageVersion>2.0.0-preview1</PackageVersion>
+        <PackageReleaseNotes>- Migrate to new API of resolving icons paths</PackageReleaseNotes>
     </PropertyGroup>
     <ItemGroup>
         <Compile Update="**\*.xaml.cs">
