--- a/Material.Icons.WPF/Material.Icons.WPF.csproj
+++ b/Material.Icons.WPF/Material.Icons.WPF.csproj
@@ -16,8 +16,8 @@
     <PackageTags>material icons material-design google-material wpf</PackageTags>
     <SignAssembly>True</SignAssembly>
     <AssemblyOriginatorKeyFile>..\key.snk</AssemblyOriginatorKeyFile>
-    <Version>1.2.0</Version>
-    <PackageReleaseNotes>- Remove hard coded Width, Height, HorizontalAlignment and VerticalAlignment from default wpf style</PackageReleaseNotes>
+    <Version>2.0.0-preview1</Version>
+    <PackageReleaseNotes>- Migrate to new API of resolving icons paths</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
