--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -13,8 +13,15 @@ jobs:
       - uses: actions/checkout@v2
         with:
           persist-credentials: false
+      - name: Cache .nuke/temp, ~/.nuget/packages
+        uses: actions/cache@v2
+        with:
+            path: |
+                .nuke/temp
+                ~/.nuget/packages
+            key: ${{ runner.os }}-${{ hashFiles('**/global.json', '**/*.csproj') }}
       - name: Run generator project
-        run: nuke GhUpdateIconsWorkflow
+        run: chmod +x build.sh && ./build.sh GhUpdateIconsWorkflow
       - name: Push changes (if any)
         uses: actions-js/push@master
         with:
