--- a/Material.Icons.Avalonia/Material.Icons.Avalonia.csproj
+++ b/Material.Icons.Avalonia/Material.Icons.Avalonia.csproj
@@ -15,8 +15,11 @@
     <AssemblyOriginatorKeyFile>..\key.snk</AssemblyOriginatorKeyFile>
     <PackageTags>material icons material-design google-material avalonia</PackageTags>
     <PackageReadmeFile>README.md</PackageReadmeFile>
-    <PackageVersion>2.0.0-preview1</PackageVersion>
-    <PackageReleaseNotes>- Migrate to new API of resolving icons paths</PackageReleaseNotes>
+    <PackageVersion>2.0.0-preview2</PackageVersion>
+    <PackageReleaseNotes>
+      - Migrate to new API of resolving icons paths
+      - Support for Avalonia 11.0.0-preview5
+    </PackageReleaseNotes>
   </PropertyGroup>
   
   <ItemGroup>
