--- a/Material.Icons.WPF/Material.Icons.WPF.csproj
+++ b/Material.Icons.WPF/Material.Icons.WPF.csproj
@@ -18,7 +18,7 @@
     <PackageTags>material icons material-design google-material wpf</PackageTags>
     <SignAssembly>True</SignAssembly>
     <AssemblyOriginatorKeyFile>..\key.snk</AssemblyOriginatorKeyFile>
-    <Version>2.0.0-preview1</Version>
+    <Version>2.0.0</Version>
     <PackageReleaseNotes>- Migrate to new API of resolving icons paths</PackageReleaseNotes>
   </PropertyGroup>
   
