--- a/Material.Icons/Material.Icons.csproj
+++ b/Material.Icons/Material.Icons.csproj
@@ -15,9 +15,8 @@
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageTags>material icons material-design google-material</PackageTags>
     <RootNamespace>Material.Icons</RootNamespace>
-    <Version>2.0.18</Version>
-    <PackageReleaseNotes>- Icons set updated according to materialdesignicons.com at Sat, 09 Dec 2023 00:41:06 GMT
-Check out changes at https://pictogrammers.com/library/mdi/history/</PackageReleaseNotes>
+    <Version>2.1.0</Version>
+    <PackageReleaseNotes>- Allows to override some icons data</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
