Removes DotSettings file

--- a/.gitignore
+++ b/.gitignore
@@ -364,6 +364,5 @@ MigrationBackup/
 .ionide/
 
 # End of https://www.toptal.com/developers/gitignore/api/csharp
-/.idea/.idea.YandexMusicResolver/.idea/
-/.idea/.idea.Material.Icons/.idea/
-/Material.Icons.Meta.dll
+.idea
+*.DotSettings
