--- a/Material.Icons.WinUI3/Material.Icons.WinUI3.csproj
+++ b/Material.Icons.WinUI3/Material.Icons.WinUI3.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net8.0-windows10.0.19041.0</TargetFramework>
+    <TargetFramework>net8.0-windows10.0.22621.0</TargetFramework>
     <TargetPlatformMinVersion>10.0.17763.0</TargetPlatformMinVersion>
     <RootNamespace>Material.Icons.WinUI3</RootNamespace>
     <RuntimeIdentifiers Condition="$([MSBuild]::GetTargetFrameworkVersion('$(TargetFramework)')) &gt;= 8">win-x86;win-x64;win-arm64</RuntimeIdentifiers>
@@ -23,6 +23,7 @@
       - Icons set updated according to materialdesignicons.com at Thu, 20 Jun 2024 12:18:52 GMT
       Check out changes at https://pictogrammers.com/library/mdi/history/
     </PackageReleaseNotes>
+    <EnableMsixTooling>true</EnableMsixTooling>
   </PropertyGroup>
 
   <!-- Workaround, see https://github.com/microsoft/WindowsAppSDK/issues/4696 -->
